terraform/nest-app/igw.tf
# create internet gateway
resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.main.id
  
    tags = {
        Name = "${var.project_name}-igw"
    }

}
