terraform/nest-app/vpc.tf
# VPC
resource "aws_vpc" "vpc" {
  cidr_block           = var.vpc_cidr

  instance_tenancy     = "default" # default or dedicated
  # instance_tenancy means that instances launched in this VPC will have the specified tenancy. "default" means instances will run on shared hardware, while "dedicated" means instances will run on dedicated hardware for your account.
  enable_dns_support   = true
  enable_dns_hostnames = true

  tags = {
    Name = "${var.project_name}-${var.env}-vpc"
  }
}

# Internet gateway for public subnet internet access
resource "aws_internet_gateway" "internet_gateway" {
  vpc_id = aws_vpc.vpc.id

  tags = {
    Name = "${var.project_name}-${var.env}-igw"
  }
}

# Get available AZs in the region
# why do i need just one?
# 
data "aws_availability_zones" "available_zones" {}

# Public subnets (internet-facing resources)
resource "aws_subnet" "public_subnet_az1" {
  vpc_id                  = aws_vpc.vpc.id
  cidr_block              = var.public_subnet_az1_cidr
  availability_zone       = data.aws_availability_zones.available_zones.names[0]
  map_public_ip_on_launch = true

  tags = {
    Name = "${var.project_name}-${var.env}-public-subnet-az1"
  }
}

resource "aws_subnet" "public_subnet_az2" {
  vpc_id                  = aws_vpc.vpc.id
  cidr_block              = var.public_subnet_az2_cidr
  availability_zone       = data.aws_availability_zones.available_zones.names[1]
  map_public_ip_on_launch = true

  tags = {
    Name = "${var.project_name}-${var.env}-public-subnet-az2"
  }
}

# Public route table - routes traffic to the internet gateway
resource "aws_route_table" "public_route_table" {
  vpc_id = aws_vpc.vpc.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.internet_gateway.id
  }

  tags = {
    Name = "${var.project_name}-${var.env}-public-route-table"
  }
}

# Associate public subnets with public route table
resource "aws_route_table_association" "public_subnet_az1_rt_association" {
  subnet_id      = aws_subnet.public_subnet_az1.id
  route_table_id = aws_route_table.public_route_table.id
}

resource "aws_route_table_association" "public_subnet_az2_rt_association" {
  subnet_id      = aws_subnet.public_subnet_az2.id
  route_table_id = aws_route_table.public_route_table.id      


}




############################private subnets (application and database tiers) - no internet access
# shouldnt this have a separate route table for private subnets?

resource "aws_route_table" "private_route_table" {
  vpc_id = aws_vpc.vpc.id

  tags = {
    Name = "${var.project_name}-${var.env}-private-route-table"
  }
} 

resource "aws_route_table_association" "private_app_subnet_az1_rt_association" {
  subnet_id      = aws_subnet.private_app_subnet_az1.id
  route_table_id = aws_route_table.private_route_table.id
}

resource "aws_route_table_association" "private_app_subnet_az2_rt_association" {  
  subnet_id      = aws_subnet.private_app_subnet_az2.id
  route_table_id = aws_route_table.private_route_table.id
}

resource "aws_route_table_association" "private_data_subnet_az1_rt_association" {
  subnet_id      = aws_subnet.private_data_subnet_az1.id
  route_table_id = aws_route_table.private_route_table.id
}

resource "aws_route_table_association" "private_data_subnet_az2_rt_association" {
  subnet_id      = aws_subnet.private_data_subnet_az2.id
  route_table_id = aws_route_table.private_route_table.id
}

# Private app subnets (application tier - ECS, EKS, EC2)
resource "aws_subnet" "private_app_subnet_az1" {
  vpc_id                  = aws_vpc.vpc.id
  cidr_block              = var.private_app_subnet_az1_cidr
  availability_zone       = data.aws_availability_zones.available_zones.names[0] # this is the first AZ in the region
  # why is this the same as the public subnet? shouldnt this be a private subnet? please answer in detail

  map_public_ip_on_launch = false # Private subnets do not assign public IPs to instances

  tags = {
    Name = "${var.project_name}-${var.env}-private-app-subnet-az1"
  }
}

resource "aws_subnet" "private_app_subnet_az2" {
  vpc_id                  = aws_vpc.vpc.id
  cidr_block              = var.private_app_subnet_az2_cidr
  availability_zone       = data.aws_availability_zones.available_zones.names[1] # this is the second AZ in the region
  map_public_ip_on_launch = false # Private subnets do not assign public IPs to instances

  tags = {
    Name = "${var.project_name}-${var.env }-private-app-subnet-az2"
  }
}

# Private data subnets (database tier - RDS, ElastiCache)
resource "aws_subnet" "private_data_subnet_az1" {
  vpc_id                  = aws_vpc.vpc.id
  cidr_block              = var.private_data_subnet_az1_cidr
  availability_zone       = data.aws_availability_zones.available_zones.names[0] # this is the first AZ in the region
  map_public_ip_on_launch = false # Private subnets do not assign public IPs to instances

  tags = {
    Name = "${var.project_name}-${var.env}-private-data-subnet-az1"
  }
}

resource "aws_subnet" "private_data_subnet_az2" {
  vpc_id                  = aws_vpc.vpc.id
  cidr_block              = var.private_data_subnet_az2_cidr
  availability_zone       = data.aws_availability_zones.available_zones.names[1] # this is the second AZ in the region
  map_public_ip_on_launch = false # Private subnets do not assign public IPs to instances 

  tags = {
    Name = "${var.project_name}-private-data-subnet-az2"
  }
}
